[package]
name = "index-access-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { path = "../index-access-storage" }
anyhow = "1.0.66"
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = [] }

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
futures = "0.3.25"
