[package]
name = "index-access-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { path = "../index-access-storage" }
async-trait = "0.1"
tokio = "1.23"

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.23", features = ["full"] }
quickcheck = "1.0"
quickcheck_async = "0.1"
futures = "0.3"
