[package]
name = "index-access-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { path = "../index-access-storage" }
anyhow = "1.0.26"
async-trait = "0.1.24"

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "1.18.1", features = ["full"] }
quickcheck = "0.9.2"
quickcheck_async = "0.1.1"
futures = "0.3.21"
