[package]
name = "index-access-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { path = "../index-access-storage" }
anyhow = "1.0.66"
async-trait = "0.1.59"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
futures = "0.3.25"
