[package]
name = "index-access-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { path = "../index-access-storage" }
anyhow = "1.0.66"
async-trait = "0.1.58"
rust-s3 = "0.32.3"
opendal = "0.19.7"

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
s3-server = "0.2.0"
tempfile = "3.3.0"
hyper = { version = "0.14.22", features = ["server"] }
futures = "0.3.25"

[[example]]
name = "s3"
