[package]
name = "index-access-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { path = "../index-access-storage" }
async-trait = "0.1"
rust-s3 = "0.32"
opendal = "0.22"

[dev-dependencies]
anyhow = "1"
quickcheck = "1.0"
tokio = { version = "1.23", features = ["full"] }
s3-server = "0.2"
tempfile = "3.3"
hyper = { version = "0.14", features = ["server"] }
futures = "0.3"

[[example]]
name = "s3"
